fix overflow y

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1925,5 +1925,6 @@ border: 1px solid #ccc;
 
 .container {
     overflow-x: hidden;
+     overflow-y: hidden;
 }
 
